--- a/src/app/modules/tourists/components/guides-list/guides-list.component.html
+++ b/src/app/modules/tourists/components/guides-list/guides-list.component.html
@@ -1,11 +1,11 @@
 <div *ngIf="searchService.guidesList" class="request-card d-none d-lg-block">
-    <mdb-card class="w-auto ml-lg-4 my-3 mx-md-3" *ngFor="let guide of searchService.guidesList">
+    <mdb-card class="w-auto ml-lg-4 my-3 mx-md-3" *ngFor="let guide of searchService.guidesList; let i = index">
         <div class="container1">
             <mdb-card-body class="p-3">
                 <div class="row">
                     <div class="col-md-4 col-lg-3">
                         <img [src]="guide.picUrl ? guide.picUrl : 'https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/grayman.png'" 
-                            class="" width="100%" height="100%" alt="...">
+                            class="" width="100%" height="210px;" alt="">
                     </div>
                     <div class="col-md-4 col-lg-5">
                         <mdb-card-title class="name" style="font-size: 20px;">
@@ -39,10 +39,14 @@
                             <button (click)="openModal(personalTour, guide)" style="background-color: #22c1c3; color: white"
                             type="button" size="sm" class="btn">Request for Personalised Tour</button>
                         </div>
-                        <div class=" mt-1 mb-0">
+                        <div *ngIf="getRating(guide).length > 0" class=" mt-1 mb-0">
                             <i class="fa fa-star" *ngFor="let star of getRating(guide)" aria-hidden="true"></i>
                             &nbsp; ({{guide.reviewAndRating.length}}+ Reviews)
                         </div>
+                        <div *ngIf="getRating(guide).length <= 0" class=" mt-1 mb-0">
+                            <b>New Guide</b>
+                        </div>
+
                     </div>
                 </div>
             </mdb-card-body>
@@ -51,17 +55,17 @@
             <div class="mt-3">
                 <ul class="nav nav-tabs mb-3" id="myTab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" id="Info-tab" data-toggle="tab" href="#Info" role="tab" aria-controls="Info" aria-selected="true">Info</a>
+                        <a class="nav-link active" id="Info-tab" data-toggle="tab" [href]="'#Info' + i" role="tab" aria-controls="Info" aria-selected="true">Info</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="rating-tab" data-toggle="tab" href="#rating" role="tab" aria-controls="rating" aria-selected="false">Reviews</a>
+                        <a class="nav-link" id="rating-tab" data-toggle="tab" [href]="'#rating' + i" role="tab" aria-controls="rating" aria-selected="false">Reviews</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="deal-tab" data-toggle="tab" href="#deal" role="tab" aria-controls="deal" aria-selected="false">Deals</a>
+                        <a class="nav-link" id="deal-tab" data-toggle="tab" [href]="'#deal' + i" role="tab" aria-controls="deal" aria-selected="false">Deals</a>
                     </li>
                 </ul>
                 <div class="tab-content" id="myTabContent">
-                    <div class="tab-pane fade show active" id="Info" role="tabpanel" aria-labelledby="Info-tab">
+                    <div class="tab-pane fade show active" [id]="'Info' + i" role="tabpanel" aria-labelledby="Info-tab">
                         <div class="row my-2">
                             <div class="col-md-6">
                                 <h4>Languages</h4>
@@ -75,17 +79,21 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane fade" id="rating" role="tabpanel" aria-labelledby="rating-tab">
+                    <div class="tab-pane fade" [id]="'rating' + i" role="tabpanel" aria-labelledby="rating-tab">
                         <div class="row my-2">
                             <div class="col-md-4">
                                 <div class="row">
                                     <div class="col-12">
                                         <h1>
-                                            <mdb-badge pill="true" primary="true">
-                                                <i class="fa fa-star" *ngFor="let star of getRating(guide)" aria-hidden="true"></i></mdb-badge>
+                                            <mdb-badge *ngIf="getRating(guide).length > 0" pill="true" primary="true">
+                                                <i class="fa fa-star" *ngFor="let star of getRating(guide)" aria-hidden="true"></i>
+                                            </mdb-badge>
+                                            <mdb-badge *ngIf="getRating(guide).length <= 0" pill="true" primary="true">
+                                                New Guide
+                                            </mdb-badge>
                                         </h1>
                                     </div>
-                                    <div class="col-12">
+                                    <div *ngIf="getRating(guide).length > 0" class="col-12">
                                         <b>Voila rating</b> based on {{guide.reviewAndRating.length}} reviews
                                     </div>
                                 </div>
@@ -117,7 +125,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane fade" id="deal" role="tabpanel" aria-labelledby="deal-tab">
+                    <div class="tab-pane fade" [id]="'deal' + i" role="tabpanel" aria-labelledby="deal-tab">
                         <h3 class="text-black">Recommended deals</h3>
                         <div class="row p-2 text-center" *ngIf="getDealsList(guide)">
                             <div class="col-lg-3 col-md-4" *ngFor="let deal of getDealsList(guide) | slice:0:3">
@@ -165,11 +173,14 @@
             <img [src]="guide.picUrl ? guide.picUrl : 'https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/grayman.png'" 
             width="100%" height="100%" alt="">
             <div class="mask mygradient white-text">
-                <div class="float-right mx-2 mt-1"> <i class="fa fa-star star" aria-hidden="true"></i>
+                <div *ngIf="getRating(guide).length > 0" class="float-right mx-2 mt-1"> <i class="fa fa-star star" aria-hidden="true"></i>
                     <i class="fa fa-star star" class="color: black" *ngFor="let star of getRating(guide)" aria-hidden="true"></i>
                     <div style="font-size:12px; color: black">({{guide?.reviewAndRating.length}}+ REVIEWS)</div>
                 </div>
-                <div style="position:absolute; bottom:6px; left:10px; overflow-wrap: break-word;">
+                <div *ngIf="getRating(guide).length <= 0" class="float-right mx-2 mt-1"> 
+                    <div style="font-size:12px; color: black">New Guide</div>
+                </div>
+                <div style="position:absolute; bottom:6px; left:10px; overflow-wrap: break-word; cursor: pointer;">
                     <h4 [routerLink]="['/tourists/touristshome/guideProfile', guide._id]" 
                     class="guide-name">{{guide?.gender}} {{guide?.name | titlecase}}</h4>
                 </div>
