--- a/src/app/modules/guide/components/personal-details/personal-details.component.html
+++ b/src/app/modules/guide/components/personal-details/personal-details.component.html
@@ -10,11 +10,11 @@
                                 <mdb-icon fas icon="user-circle" class="prefix"></mdb-icon>&nbsp;
                                 <label for="form1"> Gender</label>
                                 <select id="form1" class="form-control" formControlName="gender">
-                <option value='' disabled>Select</option>
-                <option value='Mr'>Mr</option>
-                <option value='Mrs'>Mrs</option>
-                <option value='Ms'>Ms</option>
-              </select>
+                                    <option value='' disabled>Select</option>
+                                    <option value='Mr'>Mr</option>
+                                    <option value='Mrs'>Mrs</option>
+                                    <option value='Ms'>Ms</option>
+                                </select>
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -42,19 +42,19 @@
 
                             </div>
                         </div>
-                        <div class="col-12 my-3">
+                        <div class="col-12 mt-3">
                             <div class="form-group">
                                 <div class="upload-image">
                                     <label class=" control-label upload" for="filebutton">
-                    <mdb-icon fas icon="camera-retro"></mdb-icon>&nbsp;
-                    <span>Upload Profile Picture<br></span>
-                    <input id="filebutton" name="filebutton" #inputFile (change)="onSelectFile($event)" type="file" >
-                    <!-- <small class="text-muted">Select a Valid Image File</small> -->
-                  </label>
+                                        <mdb-icon fas icon="camera-retro"></mdb-icon>&nbsp;
+                                        <span>Upload Profile Picture<br></span>
+                                        <input id="filebutton" name="filebutton" #inputFile (change)="onSelectFile($event)" type="file" >
+                                        <!-- <small class="text-muted"></small> -->
+                                    </label>
                                 </div>
                             </div>
                         </div>
-                        <div *ngIf="urlArray.length > 0" class="col-sm-6">
+                        <div *ngIf="urlArray.length > 0" class="col-12">
                             <img *ngFor="let url of urlArray" [src]="url" width="100%" height="250px" style="padding:10px;"> <br/>
                         </div>
                         <div class="col-md-6">
