--- a/src/app/modules/guide/components/deals/deals.component.html
+++ b/src/app/modules/guide/components/deals/deals.component.html
@@ -18,8 +18,8 @@
         <h1 class="ml-4">Your Deals</h1>
         <app-deals-cards [dealsList]="DealsList" [role]="'guide'"></app-deals-cards>
     </div>
-    <div *ngIf="DealsList.length <= 0 && isData">
-        <img class="image-fluid w-17 h-75 float-center m-auto " src="https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/lime-396.png" alt="">
-        <h4 class="text-center">No Deals Yet</h4>
+    <div class="text-center" *ngIf="DealsList.length <= 0 && isData">
+        <img class="image-fluid w-50 h-50" src="https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/lime-396.png" alt="">
+        <h4 >No Deals Yet</h4>
     </div>
 </div>
