--- a/src/app/modules/guide/components/requests/requests.component.html
+++ b/src/app/modules/guide/components/requests/requests.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <!--  -->
-    <app-blog></app-blog>
+    <!-- <app-blog></app-blog> -->
     <div class="d-none d-md-block" *ngIf="requestList.length > 0 && isData">
         <div class="row mt-3">
             <div class="col-12 text-center">
