--- a/src/app/modules/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.html
@@ -1,3 +1,12 @@
+<div class="row">
+ <div class="col-12 mt-3 mr-3">
+  <button type="button" mdbBtn class="waves-light btn-sm bgrey white-text float-right" 
+  aria-label="Close" (click)="editpersonal.hide()" mdbWavesEffect>Contacted</button>
+  <button type="submit" mdbBtn class="save-btn btn-sm relative waves-light dpurple white-text float-right"
+   mdbWavesEffect>New</button>
+</div> 
+</div>
+
 <div class="container-fluid">
 <div class="d-none d-sm-block">
   <div class="row mt-3">
