--- a/src/app/modules/guide/components/bookings/bookings.component.html
+++ b/src/app/modules/guide/components/bookings/bookings.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <app-blog></app-blog>
+    <!-- <app-blog></app-blog> -->
     <!--  -->
     <div class="d-none d-md-block" *ngIf="bookingsList.length > 0 && isData">
         <div class="row mt-3">
