--- a/src/app/modules/admin/pages/emergency-page/emergency-page.component.html
+++ b/src/app/modules/admin/pages/emergency-page/emergency-page.component.html
@@ -1,3 +1,99 @@
-<p>
-  emergency-page works!
-</p>
+<div class="container-fluid">
+<div class="d-none d-md-block mx-4">
+  <div class="row mt-3">
+      <div class="col-12 text-center">
+          <div class="card ripe-malinka-gradient" style="z-index: 100; width: 90%; margin-left: 5%;">
+              <h5 class="text-center white-text py-2 my-0">Emergency Requests</h5>
+          </div>
+      </div>
+  </div>
+  <div class="card mb-5" style="margin-top: -25px;">
+      <div class="card-body">
+          <div class="mt-3 mb-3">
+              <div class="table-responsive">
+                  <table class="table table-hover">
+                      <thead>
+                          <tr>
+                              <th scope="col">Sr no.</th>
+                              <th scope="col">Name</th>
+                              <th scope="col">Designation</th>
+                              <th scope="col">Action</th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr>
+                              <th scope="row">1</th>
+                              <td>Ravi shankar</td>
+                              <td>Tourist</td>
+                              <td>
+                                  <button class="btn dpurple" (click)="basicModal.show()" style="margin: auto; color:white"
+                                    mdbBtn type="button" size="sm" mdbWavesEffect>
+                                      <b>VIEW</b>
+                                  </button>
+                              </td>
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+
+<div class="d-block d-md-none mt-4">
+  <mdb-card class="bag mb-4">
+      <mdb-card-body>
+          <mdb-card-title>
+              <h4>Emergency Requests</h4>
+          </mdb-card-title>
+          <mdb-card-text>
+              <div class="row">
+                  <div class="col-4">
+                      <div><b>Sr. no.</b></div>
+                      <div>1</div>
+                  </div>
+                  <div class="col-4">
+                      <div><b>Name</b></div>
+                      <div> Ravi shankar</div>
+                  </div>
+                  <div class="col-4">
+                      <div><b>Designation</b></div>
+                      <div>tourist</div>
+                  </div>
+              </div>
+          </mdb-card-text>
+          <a size="sm" class="float-right" (click)="basicModal.show()" mdbBtn style="background: #553d67;" mdbWavesEffect>VIEW</a>
+      </mdb-card-body>
+  </mdb-card>
+</div>
+</div>
+
+<div mdbModal #basicModal="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myBasicModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-md" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close pull-right" aria-label="Close" (click)="basicModal.hide()">
+          <span aria-hidden="true">×</span>
+        </button>
+        <h4 class="modal-title w-100" id="myModalLabel"> Mr. Ravi Shankar</h4>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-6">
+           Phone No.
+           <div>9899758694</div>
+           </div>
+            <div class="col-6">
+             Email
+             <div>sdgiu@gmail.com</div>
+           
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" mdbBtn class="btn-sm waves-light bgrey white-text" aria-label="Close" (click)="basicModal.hide()" mdbWavesEffect>Close</button>
+        <button type="button" mdbBtn class="btn-sm relative waves-light dpurple white-text" mdbWavesEffect>Resolved</button>
+      </div>
+    </div>
+  </div>
+</div>
