--- a/src/app/modules/admin/pages/guide-profile/guide-profile.component.html
+++ b/src/app/modules/admin/pages/guide-profile/guide-profile.component.html
@@ -175,7 +175,7 @@
     <button type="button" mdbBtn (click)="acceptRejectGuide('REJECTED')" style="background:
      #22c1c3; color: white;" mdbWavesEffect>Reject</button>
 
-    <button type="button" mdbBtn style="background: #faed26; color: white;" 
+    <button type="button" mdbBtn style="background: #faed26; color: black;" 
     (click)="acceptRejectGuide('CONTACTED')" mdbWavesEffect>Contacted</button>
 
     <button type="button" mdbBtn style="background: #553d67; color: white;" 
