--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -93,3 +93,11 @@ table.table th, table.table td {
     padding-top: 0.5rem;
       padding-bottom: 0.5rem;
   }
+.inputStyle {
+    margin: 0 10px;
+    background-color: transparent;
+    color: white;
+    width: 40px;
+    border: none;
+    border-bottom: 1px solid gray; 
+}
