--- a/src/app/modules/admin/pages/emergency-page/emergency-page.component.html
+++ b/src/app/modules/admin/pages/emergency-page/emergency-page.component.html
@@ -17,16 +17,18 @@
                               <th scope="col">Sr no.</th>
                               <th scope="col">Name</th>
                               <th scope="col">Designation</th>
+                              <th scope="col">Location</th>
                               <th scope="col">Action</th>
                           </tr>
                       </thead>
                       <tbody>
-                          <tr>
-                              <th scope="row">1</th>
-                              <td>Ravi shankar</td>
-                              <td>Tourist</td>
+                          <tr *ngFor="let alert of sosAlertList; let i = index">
+                              <th scope="row">{{i+1}}</th>
+                              <td>{{alert.name}}</td>
+                              <td>{{alert.userType}}</td>
+                              <td>{{alert.latitude}} - {{alert.longitude}}</td>
                               <td>
-                                  <button class="btn dpurple" (click)="basicModal.show()" style="margin: auto; color:white"
+                                  <button class="btn dpurple" (click)="openContent(content, alert._id)" style="margin: auto; color:white"
                                     mdbBtn type="button" size="sm" mdbWavesEffect>
                                       <b>VIEW</b>
                                   </button>
@@ -41,59 +43,58 @@
 </div>
 
 <div class="d-block d-md-none mt-4">
-  <mdb-card class="bag mb-4">
+  <mdb-card class="bag mb-4"  *ngFor=" let item of sosAlertList">
       <mdb-card-body>
           <mdb-card-title>
               <h4>Emergency Requests</h4>
           </mdb-card-title>
           <mdb-card-text>
               <div class="row">
-                  <div class="col-4">
-                      <div><b>Sr. no.</b></div>
-                      <div>1</div>
-                  </div>
-                  <div class="col-4">
+                  <div class="col-6">
                       <div><b>Name</b></div>
-                      <div> Ravi shankar</div>
+                      <div>{{item.name}}</div>
                   </div>
-                  <div class="col-4">
+                  <div class="col-6">
                       <div><b>Designation</b></div>
-                      <div>tourist</div>
+                      <div>{{item.userType}}</div>
                   </div>
+                  <div class="col-6">
+                    <div><b>location</b></div>
+                    <div>{{item.latitude}} - {{item.longitude}}</div>
+                </div>
+                <div class="col-6">
+                  <a size="sm" class="float-right" (click)="openContent(content, item._id)" mdbBtn style="background: #553d67;" mdbWavesEffect>VIEW</a>
+              </div>
               </div>
           </mdb-card-text>
-          <a size="sm" class="float-right" (click)="basicModal.show()" mdbBtn style="background: #553d67;" mdbWavesEffect>VIEW</a>
       </mdb-card-body>
   </mdb-card>
 </div>
 </div>
 
-<div mdbModal #basicModal="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myBasicModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-md" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close pull-right" aria-label="Close" (click)="basicModal.hide()">
-          <span aria-hidden="true">×</span>
-        </button>
-        <h4 class="modal-title w-100" id="myModalLabel"> Mr. Ravi Shankar</h4>
-      </div>
-      <div class="modal-body">
-        <div class="row">
-          <div class="col-6">
-           Phone No.
-           <div>9899758694</div>
-           </div>
-            <div class="col-6">
-             Email
-             <div>sdgiu@gmail.com</div>
-           
-          </div>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" mdbBtn class="btn-sm waves-light bgrey white-text" aria-label="Close" (click)="basicModal.hide()" mdbWavesEffect>Close</button>
-        <button type="button" mdbBtn class="btn-sm relative waves-light dpurple white-text" mdbWavesEffect>Resolved</button>
+
+<ng-template #content let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title w-100" id="myModalLabel">{{userData?.gender}} {{userData?.name | titlecase}}</h4>
+    <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <div class="row">
+      <div class="col-6">
+       Phone No.
+       <div>{{userData?.phoneNumber}}</div>
+       </div>
+        <div class="col-6">
+         Email
+         <div>{{userData?.email}}</div>
       </div>
     </div>
   </div>
-</div>
+  <div class="modal-footer">
+    <button type="button" mdbBtn class="btn-sm waves-light bgrey white-text" aria-label="Close" (click)="c('Save click')" mdbWavesEffect>Close</button>
+    <button type="button" mdbBtn class="btn-sm relative waves-light dpurple white-text" (click)="changeStatus(content)"
+     mdbWavesEffect>Resolved</button>
+  </div>
+</ng-template>
