--- a/src/app/modules/guide/components/blog/blog.component.html
+++ b/src/app/modules/guide/components/blog/blog.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
   <div class="col-md-12">
 <div class="md-form md-outline">
   <textarea type="text" id="form75" class="form-control md-textarea" rows="3" mdbInput></textarea>
@@ -7,4 +7,59 @@
     Send &nbsp;<i class="far fa-paper-plane"></i></button>
 </div>
   </div>
+</div> -->
+
+<div class="blog-container">
+
+  <div class="overlay">
+    <div class="blog-heading">
+      <h1>Top 10 Places to visit in Uttarakhand</h1>
+    </div>
+  </div>
+
+  <div 
+    class="blog-img"
+    style="background-image: url(https://secureservercdn.net/160.153.138.219/vkh.6aa.myftpupload.com/wp-content/uploads/2016/03/Dayara-Bugyal-Trek-Cover.jpg);"
+  >
+  </div>
+
+  <div class="blog-avatar">
+    <img
+    src="https://i1.sndcdn.com/avatars-000647693748-k3ef4g-t200x200.jpg">
+  </div>
+
+  <div class='blog-text'>
+    <div class="meta-data width-box">
+      <div class="flex metadata-color">
+        <span>
+          Narendra Modi
+        </span>
+        <span>Dec 11, 2018 &nbsp;·&nbsp; 10 min read</span>
+      </div>
+    </div>
+  </div>
+  
+  <div class='blog-text'>
+    <div class="content width-box">
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+       Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+         It has survived not only five centuries, but also the leap into electronic typesetting,
+          remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
+           containing Lorem Ipsum passages, and more recently with desktop publishing 
+           software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum 
+           is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+           been the industry's standard dummy text ever since the 1500s, when an unknown printer 
+           took a galley of type and scrambled it to make a type specimen book. It has survived not 
+           only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+             and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+              Ipsum.
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+    </div>
+  </div>
+
 </div>
+
