--- a/src/app/modules/tourists/components/requests/requests.component.html
+++ b/src/app/modules/tourists/components/requests/requests.component.html
@@ -119,7 +119,8 @@
                 <B>Price</B>
             </div>
             <div class="col-6">
-                Rs. {{selectedRequest.price}}/-
+                {{staticDataService.currency.name}}. {{selectedRequest.price*(staticDataService.currency.value) | price}}/-
+            
             </div>
         </div>
         <div class="row">
