--- a/src/app/modules/tourists/pages/search-result-page/search-result-page.component.html
+++ b/src/app/modules/tourists/pages/search-result-page/search-result-page.component.html
@@ -116,8 +116,8 @@
             <div class="col-lg-12">
                 <div class="mb-0"><b>PRICE RANGE</b></div>
                 <hr class="px-3 py-0 ml-0 my-0 mb-2" style="width:50%; border-top: 1px solid deeppink;">
-                <p>Min price(₹): <input type="number" class="form-control" [(ngModel)]="searchService.extra_filter.minPrice"></p>
-                <p>Max price(₹): <input type="number" class="form-control" [(ngModel)]="searchService.extra_filter.maxPrice"></p>
+                <p>Min price: <input type="number" class="form-control" [(ngModel)]="searchService.extra_filter.minPrice"></p>
+                <p>Max price: <input type="number" class="form-control" [(ngModel)]="searchService.extra_filter.maxPrice"></p>
                 <ng5-slider [(value)]="searchService.extra_filter.minPrice" (userChange)="changePrice($event)" [(highValue)]="searchService.extra_filter.maxPrice" [options]="options"></ng5-slider>
 
             </div>
