--- a/src/app/shared/components/deal-modal/deal-modal.component.scss
+++ b/src/app/shared/components/deal-modal/deal-modal.component.scss
@@ -15,3 +15,7 @@ table.table th, table.table td {
     background-color: #757575;
     color: white;
 }
+#map {
+    width: 100%;
+    height: 350px;
+}
