--- a/src/app/shared/components/deals-cards/deals-cards.component.html
+++ b/src/app/shared/components/deals-cards/deals-cards.component.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="mt-2">
                     <div class="float-left">
-                        <h4 class="mb-0">₹ {{deal.price}}/-</h4>
+                        <h4 class="mb-0">{{staticDataService.currency.name}} {{(deal.price)*staticDataService.currency.value | price}}/-</h4>
                         <div class="mt-0 grey-text">per person</div>
                     </div>
                     <button (click)="openModal1(dealTour, deal)" mdbBtn type="button" class="font-weight-bold btn-brown float-right white-text" mdbWavesEffect>{{role === 'guide' ? 'View' : 'Book'}} Deal</button>
