--- a/src/app/shared/components/help-page/help-page.component.html
+++ b/src/app/shared/components/help-page/help-page.component.html
@@ -15,6 +15,9 @@
             <li class="nav-item">
                 <a class="nav-link" id="safety-tab" data-toggle="pill" href="#safety" role="tab" aria-controls="safety" aria-selected="false">Safety and Trust</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" id="languages-tab" data-toggle="pill" href="#language" role="tab" aria-controls="language" aria-selected="false">Learn Languages</a>
+            </li>
         </ul>
 
     </div>
@@ -193,6 +196,41 @@
                                 <li>HAND SANITIZERS: Hosts are recommended to carry hand sanitizer with them during the tour to be able to frequently wash their hands after touching certain things</li>
                                 <li>1.5 METRE DISTANCE: Hosts should respect the 1.5-meter distance from the guests. This includes no handshaking with the guests at the beginning or end of the tour. A simple wave 👋 or a bow 🙏 goes a long way. </li>
                             </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="tab-pane fade" id="language" role="tabpanel" aria-labelledby="language-tab">
+                <h2 class="c-faqs__headline">Learn languages</h2>
+                <ul class="c-faqs">
+                    <li class="c-faq">
+                        <span class="c-faq__title">Tamil</span>
+                        <div class="c-faq__answer">
+                        <a href="http://tamilcube.com/learn-tamil/">http://tamilcube.com/learn-tamil/</a></div>
+                    </li>
+
+                    <li class="c-faq">
+                        <span class="c-faq__title">Telugu</span>
+                        <div class="c-faq__answer">
+                        <a href="http://www.learningtelugu.org/tutorials/first-steps.html">http://www.learningtelugu.org/tutorials/first-steps.html</a></div>
+                    </li>
+                    <li class="c-faq">
+                        <span class="c-faq__title">Marathi</span>
+                        <div class="c-faq__answer">
+                           <a href="http://ilanguages.org/marathi.php">http://ilanguages.org/marathi.php</a>
+                        </div>
+                    </li>
+                    <li class="c-faq">
+                        <span class="c-faq__title">assamese</span>
+                        <div class="c-faq__answer">
+                          
+<a href="  http://ilanguages.org/assamese.php ">http://ilanguages.org/assamese.php </a>                        </div>
+                    </li>
+                    <li class="c-faq">
+                        <span class="c-faq__title">Widely Spoken languages</span>
+                        <div class="c-faq__answer">
+                           <a href=" https://www.duolingo.com/"> https://www.duolingo.com/</a>
                         </div>
                     </li>
                 </ul>
