--- a/src/app/shared/components/help-page/help-page.component.scss
+++ b/src/app/shared/components/help-page/help-page.component.scss
@@ -5,14 +5,14 @@
     }
 }
 
-.nav-link {
-    color: #553d67 !important;
-}
+// .nav-link {
+//     color: #553d67 !important;
+// }
 
-.nav-link .active {
-    background-color: #553d67 !important;
-    color: white;
-}
+// .nav-link:active {
+//     background: #553d67 !important;
+//     color: white;
+// }
 
 .c-faq__answer {
     position: absolute;
