--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -260,7 +260,7 @@
                     <!-- <input type="text" class="inputStyle" mdbInput [(ngModel)]="curr" (change)="changeCurrency($event)">  -->
                 <!-- </a> -->
                 <select class="inputStyle" [(ngModel)]="curr" (change)="changeCurrency($event)" id="form7" class="browser-default custom-select">
-                    <option class="inputStyle" *ngFor="let item of currencyData" [value]="item.name"> {{ item?.name }}</option>
+                    <option class="inputStyle" *ngFor="let item of currencyData" style="color: black;" [value]="item.name"> {{ item?.name }}</option>
                 </select>
             </li>
             <li class="nav-item dropdown" dropdown >
