--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -205,10 +205,15 @@
                   <!-- <mdb-icon fas icon="cog"></mdb-icon>  -->
                   Logout</a>
           </li>
-          <li>
-            <!-- <a [routerLink]="['/admin/emergency']" (click)="onLinkClick()" routerLinkActive="router-link-active"  class="nav-link waves-light" routerLinkActive="active" mdbWavesEffect>
+          <!-- <li>
+            <a [routerLink]="['/admin/emergency']" routerLinkActive="router-link-active"  class="nav-link waves-light" routerLinkActive="active" mdbWavesEffect>
                 SOS Alerts
-            </a> -->
+                </a>
+          </li> -->
+          <li>
+            <a [routerLink]="['/admin/emergency']" (click)="onLinkClick()" routerLinkActive="router-link-active"  class="nav-link waves-light" routerLinkActive="active" mdbWavesEffect>
+                SOS Alerts
+            </a>
           </li>
             <!-- Dropdown -->
             <li class="nav-item dropdown" dropdown >
