--- a/src/app/shared/components/deal-modal/deal-modal.component.html
+++ b/src/app/shared/components/deal-modal/deal-modal.component.html
@@ -53,7 +53,7 @@
                     <B>Price per head</B>
                 </div>
                 <div class="col-6">
-                {{staticDataService.currency.name}}. {{deal?.price*(staticDataService.currency.value) | price}}/-
+                {{staticDataService?.currency?.name}}. {{deal?.price*(staticDataService?.currency?.value) | price}}/-
                 </div>
             </div>
             <div class="row">
@@ -109,7 +109,7 @@
                 <h5 class="mt-1 mb-3">Hi! Lets personalize your experience</h5>
                 <hr mx-3>
                 <h5 class="text-left black-text">How many You Are?</h5>
-                <form [formGroup]="dealForm" (ngSubmit)="submitDealForm()">
+                <form [formGroup]="dealForm" >
                     <div class="row">
                         <div class="col">
                             <div class="form-group">
@@ -135,10 +135,24 @@
                     </div>
                     <div class="text-center mt-4 mb-4">
                         <button type="button" (click)="this.agree = false; dealTour2.hide()" class="btn bgrey mt-1">Cancel</button>
-                        <button type="submit" [disabled]="!agree" class="btn mt-1 dpurple">Book</button>
+                        <button type="button" (click)="submitDealForm(content)" [disabled]="!agree"  class="btn mt-1 dpurple">Book</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
 </div>
+
+<ng-template #content let-c="close" let-d="dismiss">
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Payment Options</h4>
+      <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body text-center">
+        <h5 class="my-3">Choose method of payment!</h5>
+        <button type="button" mdBtn (click)="initPay(content)" class="btn text-white dpurple">Online</button>
+        <button type="button" mdBtn (click)="submitDeal(content)" class="btn text-white dpurple">Cash</button>
+    </div>
+</ng-template>
