--- a/src/app/shared/components/timeline-page/timeline-page.component.html
+++ b/src/app/shared/components/timeline-page/timeline-page.component.html
@@ -15,43 +15,44 @@
             </div> -->
             <h1>Tour Timeline</h1>
             <div class="my-4">
-                <ul class="timeline">
-                    <!-- Item 1 -->
-                    <li>
-                        <div class="direction-r">
-                            <div class="flag-wrapper">
-                                <span class="hexa"></span>
-                                <span class="flag">Lorem ipsum.</span>
-                                <span class="time-wrapper"><span class="time">Feb 2015</span></span>
-                            </div>
-                            <div class="desc">Lorem ipsum Nisi labore aute do aute culpa magna nulla voluptate exercitation deserunt proident.</div>
-                        </div>
-                    </li>
+               
+<ul class="timeline">
 
-                    <!-- Item 2 -->
-                    <li>
-                        <div class="direction-r">
-                            <div class="flag-wrapper">
-                                <span class="hexa"></span>
-                                <span class="flag">Lorem ipsum Anim.</span>
-                                <span class="time-wrapper"><span class="time">Dec 2014</span></span>
-                            </div>
-                            <div class="desc">Lorem ipsum In ut sit in dolor nisi ex magna eu anim anim tempor dolore aliquip enim cupidatat laborum dolore.</div>
-                        </div>
-                    </li>
+	<!-- Item 1 -->
+	<li>
+		<div class="direction-r">
+			<div class="flag-wrapper">
+				<span class="flag">Freelancer</span>
+				<span class="time-wrapper"><span class="time">2013 - present</span></span>
+			</div>
+			<div class="desc">My current employment. Way better than the position before!</div>
+		</div>
+	</li>
+  
+	<!-- Item 2 -->
+	<li>
+		<div class="direction-r">
+			<div class="flag-wrapper">
+				<span class="flag">Apple Inc.</span>
+				<span class="time-wrapper"><span class="time">2011 - 2013</span></span>
+			</div>
+			<div class="desc">My first employer. All the stuff I've learned and projects I've been working on.</div>
+		</div>
+	</li>
 
-                    <!-- Item 3 -->
-                    <li>
-                        <div class="direction-r">
-                            <div class="flag-wrapper">
-                                <span class="hexa"></span>
-                                <span class="flag">Lorem Occaecat.</span>
-                                <span class="time-wrapper"><span class="time">July 2014</span></span>
-                            </div>
-                            <div class="desc">Lorem ipsum Minim labore Ut cupidatat quis qui deserunt proident fugiat pariatur cillum cupidatat reprehenderit sit id dolor consectetur ut.</div>
-                        </div>
-                    </li>
-                </ul>
+	<!-- Item 3 -->
+	<li>
+		<div class="direction-r">
+			<div class="flag-wrapper">
+				<span class="flag">Harvard University</span>
+				<span class="time-wrapper"><span class="time">2008 - 2011</span></span>
+			</div>
+			<div class="desc">A description of all the lectures and courses I have taken and my final degree?</div>
+		</div>
+	</li>
+  
+</ul>
+                <!-- here -->
             </div>
 
             <!-- <div class="my-5">
